# FastGPT

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
backend_server/: app.py
backend_server/components/: chat_data_processor.py  config.py  conversations.py  lang_model_service.py  middlewares.py  websocket_handler.py
backend_server/database/: orm_interface.py  sqlite.py
backend_server/database/models/: conversations.py
backend_server/routes/: conversations.py
fastgpt/: app.py  code_validation.py  config.py  docker_interaction.py  llm_communication.py
fastgpt/components/: config.py  docker_interface.py  middlewares.py
fastgpt/database/: orm_interface.py
fastgpt/database/models/: __init__.py  conversations.py
fastgpt/modules/: code_validation.py  config.py  conversations.py  data_processor.py  docker_interaction.py  llm_communication.py  logger.py  logging_config.py  middlewares.py  websocket_handler.py
fastgpt/routes/: conversations.py  generate.py  models.py
fastgpt/routes/schemas/: conversations.py
frontend_react/: package-lock.json  package.json
frontend_react/src/: App.js
frontend_react/src/components/: ChatPrompt.js  FastGPTChat.js  OldFastGPTChat.js
react_frontend/: package-lock.json  package.json
react_frontend/src/: App.js  config.js
react_frontend/src/components/: ChatOutput.js  ChatPrompt.js  DarkModeToggle.js  FastGPTChat.js  ModelSelector.js
vue_frontend/: README.md  index.html  package-lock.json  package.json
vue_frontend/src/: App.vue  main.js
vue_frontend/src/assets/: main.css
(+2 files in other folders)
